[tool.poetry]
name = "java-access-bridge-wrapper"
version = "1.2.0"
description = "Python wrapper for the Windows Java Access Bridge"
license = "Apache-2.0"
readme = "README.md"
authors = [
	"Robocorp <support@robocorp.com>",
]
repository = "https://github.com/robocorp/java-access-bridge-wrapper.git"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

packages = [
    { include = "JABWrapper", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
pywin32 = { version = ">=300,<307", platform = "win32", python = "!=3.8.1" }

[tool.poetry.dev-dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.2"

[tool.poetry.scripts]
java_tree_reader = 'JABWrapper.context_tree_reader:main'

[tool.black]
line-length = 120  # subject to change after deciding upon a standard
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
