[tool.poetry]
name = "java-access-bridge-wrapper"
version = "2.0.0"
description = "Python wrapper for the Windows Java Access Bridge"
license = "Apache-2.0"
readme = "README.md"
authors = [
	"Robocorp <support@robocorp.com>",
]
repository = "https://github.com/robocorp/java-access-bridge-wrapper.git"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

packages = [
    { include = "JABWrapper", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9.1"
pywin32 = { version = ">=300,<=311", platform = "win32" }

[tool.poetry.dev-dependencies]
black = "^24.9.1"
flake8 = "^7.3.0"
isort = "^6.1.0"
pytest = "^8.4.2"

[tool.poetry.scripts]
java_tree_reader = 'JABWrapper.context_tree_reader:main'

[tool.black]
line-length = 120  # subject to change after deciding upon a standard
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
