[project]
name = "java-access-bridge-wrapper"
version = "2.0.0"
description = "Python wrapper for the Windows Java Access Bridge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.1,<4.0"
authors = [
    { name = "Robocorp", email = "support@robocorp.com" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pywin32>=300,<=311; sys_platform == 'win32'",
]

[project.scripts]
java_tree_reader = "JABWrapper.context_tree_reader:main"

[project.urls]
Repository = "https://github.com/robocorp/java-access-bridge-wrapper.git"

[dependency-groups]
dev = [
    "black>=24.9.1",
    "flake8>=7.3.0",
    "invoke>=2.2.0",
    "isort>=6.1.0",
    "pytest>=8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/JABWrapper"]

[tool.hatch.build.targets.sdist]
include = ["src/JABWrapper"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
